--- a/package.json
+++ b/package.json
@@ -8,13 +8,26 @@
   "dependencies": {
     "jump.js": "^1.0.1",
     "lory.js": "^2.1.0",
-    "node-reset-scss": "^1.0.1"
+    "node-reset-scss": "^1.0.1",
+    "validatinator": "^1.3.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.3",
     "browserify": "^11.0.1",
+    "browserify-shim": "^3.8.12",
     "node-sass": "^3.2.0",
     "postcss-cli": "^2.1.0",
     "watch": "^0.16.0"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browser": {
+    "validatinator": "./node_modules/validatinator/js/validatinator.min.js"
+  },
+  "browserify-shim": {
+    "validatinator": "Validatinator"
   }
 }
